Improved update behavior.